# pubscout

./: README.md  pyproject.toml
.specify/features/publication-scanner/: spec-v1.md  spec-v2.md  spec-v3.md  spec.md
.specify/memory/: constitution.md
docs/: scorer-redesign-plan.md
src/pubscout/adapters/: arxiv_adapter.py  base.py  rss_adapter.py  semantic_scholar.py  web_adapter.py
src/pubscout/cli/: main.py
src/pubscout/core/: dedup.py  email.py  feedback_server.py  models.py  pipeline.py  profile.py  protocol.py  query.py  report.py  scorer.py  server.py  source_detect.py
src/pubscout/storage/: database.py
tests/unit/: test_arxiv_adapter.py  test_cli.py  test_database.py  test_dedup.py  test_email.py  test_feedback_server.py  test_models.py  test_pipeline.py  test_profile.py  test_query.py  test_report.py  test_rss_adapter.py  test_scorer.py  test_semantic_scholar.py  test_source_detect.py  test_web_adapter.py
